--- a/tests/roles/glance_adoption/files/glance_swift.yaml
+++ b/tests/roles/glance_adoption/files/glance_swift.yaml
@@ -8,7 +8,7 @@ spec:
       databaseInstance: openstack
       storage:
         storageClass: "local-storage"
-        storageRequest: 10G
+        storageRequest: 200M
       customServiceConfig: |
         [DEFAULT]
         enabled_backends = default_backend:swift
