Don't use/verify Cinder capabilities if no backend
Cinder volume and backend should have a supported storage backend
configured in order to use and verify volumes/snapshots with a
test VM that we start before adoption.

When the backend is not Ceph (the only backend being tested in upstream
CI), do not attach volumes and do not create snapshots for the test VM.
Neither verify if those are still present post-adoption.

Signed-off-by: Bohdan Dobrelia <bdobreli@redhat.com>

--- a/tests/roles/development_environment/tasks/main.yaml
+++ b/tests/roles/development_environment/tasks/main.yaml
@@ -1,10 +1,13 @@
 - name: pre-launch test VM instance
   no_log: "{{ use_no_log }}"
   when: prelaunch_test_instance|bool
+  vars:
+    cinder_backend_configured: "{{  cinder_volume_backend == 'ceph' and cinder_backup_backend == 'ceph' }}"
   ansible.builtin.shell:
     cmd: |
       {{ shell_header }}
       export OPENSTACK_COMMAND="{{ openstack_command }}"
+      export CINDER_BACKEND_CONFIGURED="{{ cinder_backend_configured | string | lower }}"
       {{ lookup('ansible.builtin.file', prelaunch_test_instance_script) }}
 
 - name: creates Barbican secret
