--- a/tests/roles/dataplane_adoption/tasks/cinder_verify.yaml
+++ b/tests/roles/dataplane_adoption/tasks/cinder_verify.yaml
@@ -5,7 +5,9 @@
       alias openstack="oc exec -t openstackclient -- openstack"
 
 - name: Verify that the volumes have correct name, status and size
-  when: prelaunch_test_instance|bool
+  when:
+    - prelaunch_test_instance|bool
+    - cinder_volume_backend == 'ceph'
   ansible.builtin.shell: |
     {{ osc_header }}
     ${BASH_ALIASES[openstack]} volume list -c Name -c Status -c Size -f value | grep "disk in-use 1"
@@ -16,7 +18,9 @@
   delay: 2
 
 - name: verify the snapshot and backup of disk volume
-  when: prelaunch_test_instance|bool
+  when:
+    - prelaunch_test_instance|bool
+    - cinder_backup_backend == 'ceph'
   ansible.builtin.shell: |
     {{ osc_header }}
     ${BASH_ALIASES[openstack]} volume snapshot list -c Name -c Status -c Size -f value | grep "snapshot available 1"
